--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --primary: #a774fa !important;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
